openshift/01-service-hazelcast-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: sca-hazelcast-headless
  labels:
    app: sca-hazelcast-openshift-mvp
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: sca-hazelcast-openshift-mvp
  ports:
    - name: hazelcast
      protocol: TCP
      port: 5701
      targetPort: 5701
