openshift/02-service-http.yml
apiVersion: v1
kind: Service
metadata:
  name: sca-service
  labels:
    app: sca-service
spec:
  selector:
    app: sca-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
