openshift/04-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sca-service
spec:
  to:
    kind: Service
    name: sca-api-service
  port:
    targetPort: http
  tls:
    termination: edge
